# vms

./: Development_plan.md  Features Guide.md  LICENSE  README.md  app.js  index.html  package.json  spatial-canvas.js  styles.css  test-all.js  test-device-model.js  test-operational-ui.js  test-workspaces.js
backend/: README.md  api-routes.js  check.js  cli.js  commands.js  compliance-services.js  datetime.js  default-data.js  device-integration.js  file-db.js  media-policy.js  repositories.js  schema-loader.js  server.js  services.js  test-api-server.js  test-commands.js  test-compliance-services.js  test-device-adapter-contract.js  test-device-integration.js  test-device-onboarding.js  test-resilience-availability.js  test-resilience-health.js  test-resilience-operations.js  test-resilience-recovery-priority.js  test-resilience-service.js  test-schema-loader.js  test-spatial-policy.js  vms-dev-db.json  voice-regex.js
backend/device-adapters/: contract.js  index.js  reference.js  registry.js
backend/resilience/: index.js  service.js
docs/: UI_REDESIGN_PLAN.md  camera-tracking-architecture-spec-v2.md  camera-tracking-architecture-spec.md  compliance-query-architecture-spec.md  failure-behavior.md  media-policy.md  shared-data-layer-architecture-spec.md  sqlite-schema.sql
native/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
native/src/: main.cpp
native/src/grid/: main_grid.cpp
native/src/hardware/: HardwareProbe.cpp  HardwareProbe.h
native/src/shell/: main_shell.cpp
native/src/spike/: main_spike.cpp
shared/resilience/: availability-policy.js  contract.js  health-policy.js  index.js  operation-policy.js  recovery-policy.js  resource-policy.js
